# deadpool

./: .coveragerc  LICENSE  LICENSE-AGPL  LICENSE-Apache  README.md  README.rst  deadpool.py  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  pythonapp.yml  scorecards.yml
examples/: callbacks.py  entrypoint.py  leftover.py  priorities.py
tests/: conftest.py  test_deadpool.py  test_dynamic_primitives.py  test_module_level.py  test_oom.py
